[package]
name = "compio_compat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compio-buf = "0.2.0-beta.1"
compio-io = "0.1.0-beta.2"
futures-util = { version = "0.3", features = ["io"] }
pin-project = "1"

[dev-dependencies]
compio = "0.9.0-beta.4"
tempfile = "3"
